[tool.poetry]
name = "scanning-with-python"
version = "0.1.0"
description = "Building a Scanning Tool Using Python"
authors = ["Searge"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^14.0.0"
urllib3 = "^2.4.0"
scapy = "^2.6.1"
click = "^8.2.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

ruff = "^0.11.12"
pycodestyle = "^2.14.0"
pyupgrade = "^3.20.0"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/flake8.toml",
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/isort.toml"
]
