[tool.poetry]
name = "scanning-with-python"
version = "0.1.0"
description = "Building a Scanning Tool Using Python"
authors = ["Searge"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^14.2.0"
urllib3 = "^2.5.0"
scapy = "^2.6.1"
click = "^8.3.1"
asyncio = "^4.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

ruff = "^0.14.7"
pycodestyle = "^2.14.0"
pyupgrade = "^3.21.2"
mypy = "^1.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = [
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/flake8.toml",
  "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/isort.toml"
]
